# micro-service-rust

./: .gitignore  Cargo.toml  docker-compose.yml
book_analytics/: Cargo.toml
book_analytics/src/: main.rs
book_api/: Cargo.toml
book_api/src/: README.md  http_servers.rs  lib.rs  main.rs
book_api/src/dto/: mod.rs
book_api/src/entity/: book.rs
book_api/src/repository/: mod.rs
book_api/src/service/: book_created_producer.rs  mod.rs
common/: Cargo.toml
database/: Cargo.toml
database/src/: lib.rs
database/tests/: db_test.rs
kafka/: Cargo.toml
kafka/resources/: post.avsc
kafka/src/: consumer.rs  lib.rs  producer.rs  utils.rs
kafka/tests/: main.rs
