[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36.2", features = ["ssl", "sasl"]}
serde = {workspace = true}
testcontainers = { workspace = true }
tokio = {workspace = true}
futures = "0.3.28"
serde_json = {workspace = true}
tracing = {workspace = true}
opentelemetry = {workspace = true}
apache-avro = {workspace = true}
schema_registry_converter = {workspace = true}
derive_builder = {workspace = true}
reqwest = "0.11.27"
